--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeduan/cordova-plugin-facebook4"
+    "url": "git+https://github.com/web-monster/cordova-plugin-facebook4.git"
   },
   "keywords": [
     "cordova",
